tests/paczka1/small_fuzzy/45608250.err
Error in line 6: OfuN S83 88,94
Error in line 13: bAys4mhSsxu A491 97,1
